k8s/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: canteen/order-service:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
spec:
  selector:
    app: order-service
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: queue-service
  template:
    metadata:
      labels:
        app: queue-service
    spec:
      containers:
        - name: queue-service
          image: canteen/queue-service:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: queue-service-svc
spec:
  selector:
    app: queue-service
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kitchen-service
  template:
    metadata:
      labels:
        app: kitchen-service
    spec:
      containers:
        - name: kitchen-service
          image: canteen/kitchen-service:latest
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: kitchen-service-svc
spec:
  selector:
    app: kitchen-service
  ports:
    - port: 3003
      targetPort: 3003
