k8s/ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canteen-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service-svc
                port:
                  number: 3001
          - path: /api/queue
            pathType: Prefix
            backend:
              service:
                name: queue-service-svc
                port:
                  number: 3002
          - path: /api/kitchen
            pathType: Prefix
            backend:
              service:
                name: kitchen-service-svc
                port:
                  number: 3003
